# Heart_speaks

./: .gcloudignore  .gitignore  1🔗  Dockerfile  EXREADME.md  Makefile  README.md  context.md  docker-compose.yml  improvement.md  improvementv2.md  instructions.md  my_prompt.md  pyproject.toml  update_authors.py
.github/workflows/: ci.yml
frontend/: .gcloudignore  Dockerfile  cloudbuild.yaml  package-lock.json  package.json
frontend/public/: manifest.json  write_test.txt
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/logs/: page.tsx
frontend/src/app/admin/users/: page.tsx
frontend/src/app/bookmarks/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/reader/: page.tsx
frontend/src/components/: AuthGuard.tsx  ChatInterface.tsx  PendingApprovals.tsx
frontend/src/lib/: api.ts  auth.ts
logs/: eval_metrics.csv
src/heart_speaks/: 1🔗  __init__.py  api.py  app.py  auth.py  config.py  firestore_db.py  graph.py  ingest.py  models.py  repository.py  retriever.py
tests/: test_firestore_auth.py
tests/eval/: eval_dataset.json  generate_dataset.py  run_eval.py
tests/smoke/: test_smoke.py
tests/unit/: test_api_fixes.py  test_firestore_repository.py  test_ingest.py  test_models.py  test_retriever.py
