[project]
name = "heart-speaks"
version = "0.1.0"
description = "RAG chatbot over spiritual messages (PDFs)"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0,<0.4.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-chroma>=0.1.4,<0.2.0",
    "langchain-text-splitters>=0.3.0,<0.4.0",
    "chromadb>=0.5.0",
    "openai>=1.40.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "langsmith>=0.1.100,<0.2.0",
    "httpx>=0.27.0",
    "flashrank>=0.2.8",
    "langchain-core>=0.3.0,<0.4.0",
    "langgraph>=0.2.0",
    "pypdf>=4.0.0",
    "cryptography>=41.0.0",
    "ragas>=0.1.0",
    "rank_bm25>=0.2.2",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_file = "tests/logs/pytest.log"
log_file_level = "DEBUG"
